package voyatrip.command.types;

public enum CommandAction {
    ADD,
    DELETE_BY_INDEX,
    DELETE_BY_NAME,
    MODIFY,
    MODIFY_TRIP_WITHOUT_INDEX,
    LIST,
    CHANGE_DIRECTORY,
    CHANGE_TRIP_BY_INDEX,
    CHANGE_TRIP_BY_NAME,
    LIST_BY_INDEX,
    LIST_BY_NAME,
    EXIT
}
