package voyatrip.logic.command.types;

public enum CommandTarget {
    TRIP,
    ITINERARY,
    DAY,
    ACTIVITY,
    ACCOMMODATION,
    TRANSPORTATION
}
